--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ header{
 /* LANG RIGHT */
 .lang{
   position:fixed;
-  top:18px;
-  right:18px;
+  top:16px;
+  right:16px;
   display:flex;
   gap:6px;
   z-index:2000;
@@ -90,25 +90,23 @@ header{
 /* MAIN */
 main{
   margin-top:140px;
-  padding:40px 20px 120px;
+  padding:40px 20px 200px;
   max-width:1100px;
-  margin:auto;
+  margin-left:auto;
+  margin-right:auto;
   text-align:center;
 }
 
 /* TITLE */
 h1{
   font-size:clamp(42px,6vw,74px);
-  margin-bottom:30px;
+  margin-bottom:26px;
   margin-top:20px;
-  position:relative;
 }
 h1::after{
   content:"";
-  position:absolute;
-  left:50%;
-  bottom:-16px;
-  transform:translateX(-50%);
+  display:block;
+  margin:14px auto 0;
   width:160px;
   height:6px;
   background:#00cfff;
@@ -125,7 +123,7 @@ p{
   font-size:clamp(17px,2.5vw,21px);
   line-height:1.65;
   opacity:.92;
-  max-width:900px;
+  max-width:880px;
   margin:0 auto 50px;
 }
 
@@ -149,10 +147,9 @@ p{
 
 /* OFFER */
 .offer{
-  position:fixed;
-  bottom:26px;
-  left:26px;
-  padding:10px 16px;
+  margin:60px auto 0;
+  display:inline-block;
+  padding:10px 18px;
   border-radius:20px;
   background:rgba(0,200,255,.18);
   border:1px solid rgba(0,200,255,.35);
@@ -168,11 +165,14 @@ p{
 
 /* FOOTER */
 footer{
+  margin-top:120px;
+  padding:40px 20px;
   text-align:center;
-  padding:30px 20px;
   font-size:13px;
-  opacity:.5;
+  opacity:.6;
 }
+
+/* PREMIUM TAP SOUND (NO MP3) */
 </style>
 </head>
 
@@ -196,58 +196,67 @@ footer{
   <h1>ZenSite</h1>
 
   <p id="desc"
-     data-es="Creamos experiencias digitales de alto nivel que transmiten confianza, elevan tu marca y convierten visitas en clientes reales."
-     data-en="We create high-end digital experiences that build trust, elevate your brand, and turn visits into real clients.">
-    Creamos experiencias digitales de alto nivel que transmiten confianza, elevan tu marca y convierten visitas en clientes reales.
+     data-es="Creamos experiencias digitales de alto nivel que transmiten confianza, elevan tu marca y convierten visitas en clientes reales. ¿Quieres llevar tu negocio al siguiente nivel? Llegaste al lugar correcto."
+     data-en="We create high-level digital experiences that build trust, elevate your brand, and turn visits into real clients. Want to take your business to the next level? You’re in the right place.">
+    Creamos experiencias digitales de alto nivel que transmiten confianza, elevan tu marca y convierten visitas en clientes reales. ¿Quieres llevar tu negocio al siguiente nivel? Llegaste al lugar correcto.
   </p>
 
   <div class="preview">
     <img src="background.jpg" alt="ZenSite preview">
   </div>
+
+  <div class="offer" id="offer"
+       data-es="🎁 15% OFF · Diciembre"
+       data-en="🎁 15% OFF · December">
+    🎁 15% OFF · Diciembre
+  </div>
 </main>
 
 <footer>
-  © <span id="year"></span> ZenSite. Todos los derechos reservados.
+  © 2025 ZenSite. Todos los derechos reservados.
 </footer>
 
-<div class="offer"
-     data-es="🎁 15% OFF · Diciembre"
-     data-en="🎁 15% OFF · December">
-  🎁 15% OFF · Diciembre
-</div>
-
 <script>
-/* YEAR */
-document.getElementById("year").textContent=new Date().getFullYear();
-
-/* SOUND */
-let audioReady=false;
-let tapAudio;
-function initAudio(){
-  tapAudio=new Audio("data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQAAAAA=");
-  tapAudio.volume=0.4;
-  audioReady=true;
-}
-document.addEventListener("click",()=>{if(!audioReady) initAudio();},{once:true});
+/* PREMIUM TAP SOUND (APPLE-LIKE) */
+const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 function playTap(){
-  if(audioReady){
-    tapAudio.currentTime=0;
-    tapAudio.play().catch(()=>{});
-    if(navigator.vibrate) navigator.vibrate(10);
-  }
+  const osc = audioCtx.createOscillator();
+  const gain = audioCtx.createGain();
+  osc.type = "sine";
+  osc.frequency.value = 880;
+  gain.gain.value = 0.05;
+  osc.connect(gain);
+  gain.connect(audioCtx.destination);
+  osc.start();
+  osc.stop(audioCtx.currentTime + 0.04);
 }
-document.querySelectorAll("a,button").forEach(el=>{
-  el.addEventListener("click",playTap);
+
+/* CLICK SOUND */
+document.querySelectorAll("a, button").forEach(el=>{
+  el.addEventListener("click", playTap);
 });
 
 /* TRANSLATION */
+const esBtn=document.getElementById("esBtn");
+const enBtn=document.getElementById("enBtn");
+
 function setLang(lang){
   document.querySelectorAll("[data-"+lang+"]").forEach(el=>{
-    el.textContent=el.dataset[lang];
+    el.textContent = el.dataset[lang];
   });
 }
-esBtn.onclick=()=>{esBtn.classList.add("active");enBtn.classList.remove("active");setLang("es");};
-enBtn.onclick=()=>{enBtn.classList.add("active");esBtn.classList.remove("active");setLang("en");};
+
+esBtn.onclick=()=>{
+  esBtn.classList.add("active");
+  enBtn.classList.remove("active");
+  setLang("es");
+};
+
+enBtn.onclick=()=>{
+  enBtn.classList.add("active");
+  esBtn.classList.remove("active");
+  setLang("en");
+};
 </script>
 
 </body>
